yaml-files/microservice/mongo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: "250m"      # minimum CPU
              memory: "512Mi"  # minimum memory to start MongoDB
            limits:
              cpu: "1000m"     # max CPU allowed
              memory: "2Gi"    # max memory allowed
          volumeMounts:
            - mountPath: /data/db
              name: mongo-storage
      volumes:
        - name: mongo-storage
          emptyDir: {}
